--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-table {
+/* table {
   width: 100%;
   border-collapse: collapse;
 }
@@ -28,4 +28,4 @@ tr:hover {
 .tableContainer {
   overflow-y: auto;
   max-height: 400px;
-}
+} */
