--- a/src/index.css
+++ b/src/index.css
@@ -2,21 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+body, html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Fira Code', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-    
+  background-color: #15202b; /* Dark background */
+  color: #e0e0e0; /* Lighter text */
 }
 
 table {
-  font-family: 'Fira Code', monospace;
+  border-collapse: collapse;
+  margin: auto;
+  color: #ffffff; /* White text for readability */
+}
+
+th, td {
+  border: 1px solid #aaa; /* Darker borders for elements */
+  padding: 10px;
+  text-align: left;
+  border-top: 0;
+}
+
+thead {
+  background-color: #aaa; /* Darker background for table headers */
+}
+
+thead th {
+  position: sticky;
+  top: 0;
+  background-color: #1d3a5f;
+  z-index: 1; /* Ensures the header is above other content */
 }
